// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilmBlock renders correctly 1`] = `
<FilmBlockFrontSide
  callModal={[Function]}
  id={1}
  name="nemo"
  poster="https://image.tmdb.org/t/p/w500"
  rating={0}
  setDefaultImg={[Function]}
  switchMode={[Function]}
  tagList="empty"
/>
`;

exports[`FilmBlock renders correctly in details mode 1`] = `
<FilmBlockBackSide
  callModal={[Function]}
  name="nemo"
  overview="some text"
  poster="https://image.tmdb.org/t/p/w500"
  rating={0}
  switchMode={[Function]}
  tagList="empty"
/>
`;
